@@ -27,7 +27,9 @@ import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 
-/** Created by enricorisa on 08/10/14. */
+/**
+ * Created by enricorisa on 08/10/14.
+ */
 public class LuceneContextTest extends BaseLuceneTest {
 
   @Before
@@ -65,8 +67,8 @@ public class LuceneContextTest extends BaseLuceneTest {
                 + " \"(title:man)\" limit 1");
 
     OResult doc = docs.next();
-    Assert.assertEquals(new Long(14), doc.<Long>getProperty("$totalHits"));
-    Assert.assertEquals(new Long(14), doc.<Long>getProperty("$Song_title_totalHits"));
+    Assert.assertEquals(Long.valueOf(14), doc.<Long>getProperty("$totalHits"));
+    Assert.assertEquals(Long.valueOf(14), doc.<Long>getProperty("$Song_title_totalHits"));
     assertFalse(docs.hasNext());
   }
 }
